--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "next": "^13.2.3",
+    "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2"
@@ -17,6 +17,7 @@
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "serve": "^14.2.3",
     "typescript": "^4.9.5"
   },
   "license": "MIT"
